[package]
name = "epp-client"
version = "0.7.0"
edition = "2021"
rust-version = "1.59"
license = "MIT"
description = "EPP (Extensible Provisioning Protocol) Client Library for Domain Registration and Management"
repository = "https://github.com/masalachai/epp-client"

[features]
default = ["tokio-rustls"]

[dependencies]
async-trait = "0.1.52"
celes = "2.1"
chrono = { version = "0.4.23", features = ["serde"] }
quick-xml = { version = "0.26", features = [ "serialize" ] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["io-util", "net", "time"] }
tokio-rustls = { version = "0.23", optional = true }
tracing = "0.1.29"
webpki-roots = "0.22.1"

[dev-dependencies]
regex = "1.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
tracing-subscriber = "0.3.3"
