[package]
name = "epp-client-macros"
version = "0.1.0"
edition = "2018"
license = "MIT"
authors = ["Ritesh Chitlangi <ritesh@ayravat.com>"]
description = "Macros for the epp-client Library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "fold"] }
quote = "1"
