[package]
name = "epp-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "example-client"
path = "examples/client.rs"

[dependencies]
epp-client-macros = { path = "../epp-client-macros" }
bytes = "1"
chrono = "0.4"
confy = "0.4"
futures = "0.3"
lazy_static = "1.4"
quick-xml = { version = "0.22", features = [ "serialize" ] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = [ "full" ] }
tokio-rustls = "0.22"
webpki = "0.22"
webpki-roots = "0.21"

[dev-dependencies]
tokio-test = "*"
