[package]
name = "epp-client"
version = "0.3.0"
edition = "2018"
license = "MIT"
authors = ["Ritesh Chitlangi <ritesh@ayravat.com>"]
description = "EPP (Extensible Provisioning Protocol) Client Library for Domain Registration and Management"
repository = "https://github.com/masalachai/epp-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epp-client-macros = "0.1" # { path = "../epp-client-macros" }
bytes = "1"
chrono = "0.4"
env_logger = "0.9"
log = "0.4"
quick-xml = { version = "0.22", features = [ "serialize" ] }
rustls = "0.20"
rustls-pemfile = "0.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = [ "full" ] }
tokio-rustls = "0.23"
webpki-roots = "0.22.1"

[dev-dependencies]
tokio-test = "0.4"
regex = "1.5"
